--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,9 @@
 ---
-import '../styles/global.css'
-import Navigation from '../components/';
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Greeting from '../components/Greeting';
+const pageTitle = "Home Page";
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
-  </head>
-  <body>
-	<Navigation />
-    <h1>Astro</h1>
-  </body>
-</html>
+<BaseLayout>
+	<h2>injected</h2>
+	<Greeting client:load messages={["Hay", "Hello", "Hola", "Wassup","Yo","Sup","Howdy"]} />
+</BaseLayout>
