--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,5 @@
 ---
-import '../styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro'
+import BaseLayout from '@/layouts/BaseLayout.astro';
 const pageTitle = "About";
 const identity = {
   firstName: "Ali",
@@ -24,31 +22,8 @@ const skillColor = "crimson";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
+<BaseLayout>
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>{pageTitle}</title>
-    <style define:vars={{skillColor, fontWeight, textCase}}>
-      
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }      
-    </style>
-  </head>
-
-  <body>
-
-    <Header/>
 
     <h1>fuck!</h1>
     <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
@@ -70,6 +45,5 @@ const textCase = "uppercase";
       {finished && <p>I finished this tutorial!</p>}
 
       {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-    <Footer/>
-  </body>
-</html>
+
+</BaseLayout>
